zelda 2p header overflow fixed?

--- a/public/z1r2019/two.css
+++ b/public/z1r2019/two.css
@@ -325,15 +325,15 @@ tr-timer span {
 }
 
 .header{
-    background: url('images/staff-back-all.svg') no-repeat 0 50% / 394px 300%;
+    background: url('images/staff-back-all.svg') no-repeat 0 50% / 100% 300%;
     text-align: center;
-    width: 394px;
+    min-width: 394px;
     min-height: 78px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: -2px auto;
-    padding: 12px;
+    padding: 12px 18px;
     line-height: 1.2  
 }
 
